feat(store): added amqp listeners chore(app): bumped amqp version to 1.3.0